force-app/main/default/objects/SccMilitaryRule__mdt/SccMilitaryRule__mdt.object-meta.xml
<CustomObject>
    <description>可由管理员维护的军事关键词、军事行业码、军种码和优先级。</description>
    <label>客户编码军事规则</label>
</CustomObject>