force-app/main/default/objects/SccMilitaryRule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>启用</label>
    <type>Checkbox</type>
</CustomField>