force-app/main/default/objects/SccMilitaryRule__mdt/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <label>军种码</label>
    <length>2</length>
    <type>Text</type>
</CustomField>