force-app/main/default/objects/SccMilitaryRule__mdt/fields/ContextKeywords__c.field-meta.xml
<CustomField>
    <fullName>ContextKeywords__c</fullName>
    <description>用于学院、医院等组合判断，多个词使用英文分号分隔。</description>
    <label>上下文关键词</label>
    <length>255</length>
    <type>Text</type>
</CustomField>