force-app/main/default/objects/SccMilitaryRule__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>匹配关键词</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>