force-app/main/default/objects/SccMilitaryRule__mdt/fields/MilitaryIndustryCode__c.field-meta.xml
<CustomField>
    <fullName>MilitaryIndustryCode__c</fullName>
    <label>军事行业码</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>